# Agentic-AI-BootCamp

./: pyproject.toml
1-Foundation_Agentic_AI/: 1-First_Workflow.ipynb  2-Build_ChatBot.ipynb  3-Pydantic_Data_Validation.ipynb  4-Multi_LLM_Model.ipynb  5-Push_Notification_LLMs.ipynb  app.py
2-AsycIO-Foundation/: 1-Demo_AsyncIO.ipynb  2-BuildingBlock_OpenAI_SDK.ipynb
3-Building_Sales_Outreach/: Sales_Outreach_Agents.ipynb  SendGrid_Setup_README.md
4-Multi_Model_Integration/: multi-model-orchestration.ipynb
5-SuperCharged_Research_Agent/: BioTech-search-agent.ipynb  web-search-agent.ipynb
5-SuperCharged_Research_Agent/Financial_Research_WebAgent/: App.py  ResearchManager.py  emailAgent.py  reportWriterAgent.py  searchPlanner.py  webSearchAgent.py
Building_Sales_Outreach/: Sales_Outreach_Agents.ipynb
LangGraph/: LangGraph_Chatbot.ipynb  LangGraph_Foundation.ipynb  LangGraph_MiniFlow.ipynb  LangGraph_with_Playwrite.ipynb  LangSmith_Custom_Tools.ipynb  checkpoints.db-shm  checkpoints.db-wal
fincore_ai/: README.md  pyproject.toml
fincore_ai/src/fincore_ai/: crew.py  main.py
fincore_ai/src/fincore_ai/config/: agents.yaml  tasks.yaml
optionstrader/: README.md  pyproject.toml  report.md
optionstrader/src/optionstrader/: crew.py  main.py
optionstrader/src/optionstrader/config/: agents.yaml  tasks.yaml
profitpilot/: README.md  pyproject.toml
profitpilot/memory/: long_term.db
profitpilot/memory/embeddings/: chroma.sqlite3
profitpilot/memory/embeddings/entities/: chroma.sqlite3
profitpilot/output/: decision.md  research_report.json
profitpilot/src/profitpilot/: crew.py  main.py
profitpilot/src/profitpilot/config/: agents.yaml  tasks.yaml
profitpilot/src/profitpilot/tools/: push_notification.py
pybotx/: README.md  pyproject.toml
pybotx/output/: code_and_output.txt
pybotx/src/pybotx/: crew.py  main.py
pybotx/src/pybotx/config/: agents.yaml  tasks.yaml
thinkbot/: README.md  pyproject.toml
thinkbot/output/: break_case.md  make_case.md  render_verdict.md
thinkbot/src/thinkbot/: crew.py  main.py
thinkbot/src/thinkbot/config/: agents.yaml  tasks.yaml
