[project]
name = "optionstrader"
version = "0.1.0"
description = "OptionsTrader using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
optionstrader = "optionstrader.main:run"
run_crew = "optionstrader.main:run"
train = "optionstrader.main:train"
replay = "optionstrader.main:replay"
test = "optionstrader.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
