[project]
name = "profitpilot"
version = "0.1.0"
description = "ProfitPilot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
profitpilot = "profitpilot.main:run"
run_crew = "profitpilot.main:run"
train = "profitpilot.main:train"
replay = "profitpilot.main:replay"
test = "profitpilot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
