[project]
name = "pybotx"
version = "0.1.0"
description = "PyBotX using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
pybotx = "pybotx.main:run"
run_crew = "pybotx.main:run"
train = "pybotx.main:train"
replay = "pybotx.main:replay"
test = "pybotx.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
