[project]
name = "thinkbot"
version = "0.1.0"
description = "ThinkBOT using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
thinkbot = "thinkbot.main:run"
run_crew = "thinkbot.main:run"
train = "thinkbot.main:train"
replay = "thinkbot.main:replay"
test = "thinkbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
